added routes for new attendance, working on routes to see all previous attendance

--- a/views/index.html
+++ b/views/index.html
@@ -2,9 +2,24 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" charset="utf-8">
+    <link rel="stylesheet" href="/style.css" charset="utf-8">
     <title>Art Museum Attendance</title>
   </head>
   <body>
-    <h1>yayyyy!</h1>
+    <div class="container-fluid">
+
+      <div class="col-xs-12">
+        <button type="button" id="in" class="btn btn-success btn-lg btn-block" name="button">In</button>
+      </div>
+
+      <div class="col-xs-12">
+        <button type="button" id="out" class="btn btn-danger btn-lg btn-block" name="button">Out</button>
+      </div>
+
+      <a href="/attendance/reports">See All Attendance</a>
+
+    </div>
+    <script src="/index.js" charset="utf-8"></script>
   </body>
 </html>
