prep for heroku

--- a/views/reports.html
+++ b/views/reports.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" charset="utf-8">
   </head>
   <body>
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <h1>reports!</h1>
+          <h1>Reports!</h1>
           <section id="attend-results"></section>
+          <a href='/'>Back</a>
         </div>
       </div>
     </div>
