Added UI for username and location, controller now returns total attendance for the day when a new attendance is created.

--- a/views/buttons.html
+++ b/views/buttons.html
@@ -9,28 +9,21 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row text-center">
+      <div class="row">
         <div class="col-xs-12">
-          <h3>Enter your name and location to get started!</h3>
+          <button type="button" id="in" class="btn btn-success btn-lg btn-block" name="button">In</button>
         </div>
       </div>
 
-      <div class="row text-center">
+      <div class="row">
         <div class="col-xs-12">
-          <input type="text" name="name" placeholder="Enter your name" />
+          <button type="button" id="out" class="btn btn-danger btn-lg btn-block" name="button">Out</button>
         </div>
-
-
       </div>
 
-      <div class="row text-center">
+      <div class="row">
         <div class="col-xs-12">
-          <select name="location">
-            <option value="EAST">EAST</option>
-            <option value="WEST1">WEST1</option>
-            <option value="WEST2">WEST2</option>
-            <option value="WEST3">WEST3</option>
-          </select>
+          <a href="/attendance/reports">See All Attendance</a>
         </div>
       </div>
 
