--- a/views/index.html
+++ b/views/index.html
@@ -15,15 +15,13 @@
         </div>
       </div>
 
-      <div class="row text-center">
+      <div id="name" class="row text-center">
         <div class="col-xs-12">
           <input type="text" name="name" placeholder="Enter your name" />
         </div>
-
-
       </div>
 
-      <div class="row text-center">
+      <div id="location" class="row text-center">
         <div class="col-xs-12">
           <select name="location">
             <option value="EAST">EAST</option>
@@ -34,6 +32,9 @@
         </div>
       </div>
 
+      <div class="row text-center">
+        <a href="/attendance/buttons"><button type="button" name="button">Got it!</button></a>
+      </div>
 
 
     </div>
