--- a/views/buttons.html
+++ b/views/buttons.html
@@ -8,42 +8,56 @@
     <title>Art Museum Attendance</title>
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid text-center">
+
       <div class="row">
         <div class="col-xs-12">
-          <button type="button" id="in" class="btn btn-success btn-lg btn-block" name="button">In</button>
-          <h3 id="num-in"></h3>
+          <h1>Art Museum Attendance</h1>
         </div>
       </div>
 
       <div class="row">
         <div class="col-xs-12">
-          <button type="button" id="out" class="btn btn-danger btn-lg btn-block" name="button">Out</button>
-          <h3 id="num-out"></h3>
+          <button type="button" id="in" class="btn btn-success btn-lg btn-block center-block" name="button">
+            In
+            <span id="num-in"></span>
+          </button>
+
         </div>
       </div>
 
       <div class="row">
+        <div class="col-xs-12">
+          <button type="button" id="out" class="btn btn-danger btn-lg btn-block center-block" name="button">
+            Out
+            <span id="num-out"></span>
+          </button>
+        </div>
+      </div>
+
+      <!-- <div class="row">
         <div class="col-xs-12">
           <a href="/attendance/reports"><button class="btn">See All Attendance</button></a>
         </div>
-      </div>
+      </div> -->
 
       <div class="row">
         <div class="col-xs-12">
-          <h5>You are signed in as <span id="current-name"></span></h5>
+          <h5>You are signed in as <span id="current-name"></span> at <span id="current-location"></span>.</h5>
         </div>
       </div>
 
       <div class="row">
         <div class="col-xs-12">
-          <h5>Your location is <span id="current-location"></span></h5>
+          <a href="/"><h5>Sign in as someone else</h5></a>
         </div>
       </div>
 
 
 
     </div>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" charset="utf-8"></script>
     <script src="/buttons.js" charset="utf-8"></script>
   </body>
 </html>
