--- a/views/index.html
+++ b/views/index.html
@@ -16,7 +16,7 @@
       </div>
 
       <div id="name" class="row text-center">
-        <div class="col-xs-12">
+        <div class="col-xs-12 input-group">
           <input type="text" name="name" placeholder="Enter your name" />
         </div>
       </div>
@@ -33,11 +33,28 @@
       </div>
 
       <div class="row text-center">
-        <a href="/attendance/buttons"><button type="button" name="button">Got it!</button></a>
+        <div class="btn-group">
+          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Choose a location <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu">
+            <li>EAST</li>
+            <li>WEST1</li>
+            <li>WEST2</li>
+            <li>WEST3</li>
+          </ul>
+        </div>
+      </div>
+
+
+      <div class="row text-center">
+        <a href="/attendance/buttons"><button class="btn btn-primary" type="button" name="button">Got it!</button></a>
       </div>
 
 
     </div>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" charset="utf-8"></script>
     <script src="/index.js" charset="utf-8"></script>
   </body>
 </html>
