--- a/views/buttons.html
+++ b/views/buttons.html
@@ -18,9 +18,9 @@
 
       <div class="row">
         <div class="col-xs-12">
-          <button type="button" id="in" class="btn btn-success btn-lg btn-block center-block" name="button">
+          <button type="button" id="in" class="btn btn-success btn-lg btn-block center-block margin-top margin-bottom" name="button">
             In
-            <span id="num-in"></span>
+            <span id="num-in" class="float-right"></span>
           </button>
 
         </div>
@@ -28,18 +28,12 @@
 
       <div class="row">
         <div class="col-xs-12">
-          <button type="button" id="out" class="btn btn-danger btn-lg btn-block center-block" name="button">
+          <button type="button" id="out" class="btn btn-danger btn-lg btn-block center-block margin-bottom" name="button">
             Out
-            <span id="num-out"></span>
+            <span id="num-out" class="float-right"></span>
           </button>
         </div>
       </div>
-
-      <!-- <div class="row">
-        <div class="col-xs-12">
-          <a href="/attendance/reports"><button class="btn">See All Attendance</button></a>
-        </div>
-      </div> -->
 
       <div class="row">
         <div class="col-xs-12">
