--- a/views/index.html
+++ b/views/index.html
@@ -11,19 +11,20 @@
     <div class="container-fluid">
       <div class="row text-center">
         <div class="col-xs-12">
-          <h3>Enter your name and location to get started!</h3>
+          <h3 id="title">Enter your name and location to get started!</h3>
         </div>
       </div>
 
-      <div id="name" class="row text-center">
+      <div class="row text-center">
         <div class="col-xs-12 input-group">
-          <input type="text" name="name" placeholder="Enter your name" />
+          <input id="name"type="text" name="name" placeholder="Enter your name" />
         </div>
       </div>
 
-      <div id="location" class="row text-center">
+      <div class="row text-center">
         <div class="col-xs-12">
-          <select name="location">
+          <select id="location" class="margin-top margin-bottom" name="location">
+            <option value="" disabled selected>Select a location</option>
             <option value="EAST">EAST</option>
             <option value="WEST1">WEST1</option>
             <option value="WEST2">WEST2</option>
@@ -33,22 +34,7 @@
       </div>
 
       <div class="row text-center">
-        <div class="btn-group">
-          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Choose a location <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li>EAST</li>
-            <li>WEST1</li>
-            <li>WEST2</li>
-            <li>WEST3</li>
-          </ul>
-        </div>
-      </div>
-
-
-      <div class="row text-center">
-        <a href="/attendance/buttons"><button class="btn btn-primary" type="button" name="button">Got it!</button></a>
+        <a href="/attendance/buttons"><button id="got-it" class="btn btn-primary margin-bottom" type="button" name="button">Got it!</button></a>
       </div>
 
 
