--- a/views/buttons.html
+++ b/views/buttons.html
@@ -37,6 +37,14 @@
 
       <div class="row">
         <div class="col-xs-12">
+          <button type="button" id="undo" class="btn btn-lg btn-block center-block margin-bottom" name="button">
+            Undo last action
+          </button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
           <h5>You are signed in as <span id="current-name"></span> at <span id="current-location"></span>.</h5>
         </div>
       </div>
