Fixed button size.

--- a/views/buttons.html
+++ b/views/buttons.html
@@ -37,7 +37,7 @@
 
       <div class="row">
         <div class="col-xs-12">
-          <button type="button" id="undo" class="btn btn-lg btn-block center-block margin-bottom" name="button">
+          <button type="button" id="undo" class="btn btn-primary btn-lg btn-block center-block margin-bottom" name="button">
             Undo last action
           </button>
         </div>
